...
            "state" : "translated",
            "value" : "Identité du compte"
          }
        }
      }
    },
    "Accounts" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Konten"
          }
...
            "state" : "translated",
            "value" : "Ajoutez un compte SIP pour passer des appels"
          }
        }
      }
    },
    "Add account" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Konto hinzufügen"
          }
...
            "state" : "translated",
            "value" : "Enregistrement auto, stockage, format"
          }
        }
      }
    },
    "Back" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurück"
          }
...
            "state" : "translated",
            "value" : "Bluetooth"
          }
        }
      }
    },
    "CALL ENDED" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ANRUF BEENDET"
          }
...
            "state" : "translated",
            "value" : "APPEL TERMINÉ"
          }
        }
      }
    },
    "Call" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anrufen"
          }
...
            "state" : "translated",
            "value" : "Effacer tout l’historique des appels ?"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
          }
...
            "state" : "translated",
            "value" : "Désactivé"
          }
        }
      }
    },
    "Display name" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anzeigename"
          }
...
            "state" : "translated",
            "value" : "Ne pas déranger"
          }
        }
      }
    },
    "Domain" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Domain"
          }
...
            "state" : "translated",
            "value" : "Raccrocher"
          }
        }
      }
    },
    "Hold" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Halten"
          }
...
            "state" : "translated",
            "value" : "ICE nécessite un serveur STUN"
          }
        }
      }
    },
    "INCOMING CALL" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "EINGEHENDER ANRUF"
          }
...
            "state" : "translated",
            "value" : "Appels entrants"
          }
        }
      }
    },
    "Keypad" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tastenfeld"
          }
...
            "state" : "translated",
            "value" : "Hors ligne"
          }
        }
      }
    },
    "On hold" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gehalten"
          }
...
            "state" : "translated",
            "value" : "Périphérique de sortie"
          }
        }
      }
    },
    "Password" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passwort"
          }
...
            "state" : "translated",
            "value" : "Enregistrements"
          }
        }
      }
    },
    "Registered" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Registriert"
          }
...
            "state" : "translated",
            "value" : "Redémarrez YeyoFone pour utiliser la nouvelle langue."
          }
        }
      }
    },
    "Resume" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fortsetzen"
          }
...
            "state" : "translated",
            "value" : "Comptes SIP"
          }
        }
      }
    },
    "SIP username" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "SIP-Benutzername"
          }
...
            "state" : "translated",
            "value" : "Serveur STUN (facultatif)"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Speichern"
          }
...
            "state" : "translated",
            "value" : "Envoyer le message"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Einstellungen"
          }
...
